name:                clt13-hs
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
--license-file:        LICENSE
author:              Brent Carmer
maintainer:          bcarmer@gmail.com
-- copyright:
category:            Cryptography
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
    exposed-modules:      CLT13
                        , CLT13.IndexSet
                        , CLT13.MMap
                        , CLT13.Encoding
                        , CLT13.Rand
                        , CLT13.Util

    build-depends:        base >=4.8 && <4.9
                        , DRBG
                        , bytestring
                        , cereal
                        , containers
                        , crypto-api
                        , deepseq
                        , ghc-prim
                        , integer-gmp
                        , monad-parallel
                        , mtl
                        , parallel

    ghc-options:        -threaded -with-rtsopts=-N4
    cpp-options:        -DOPTIMIZATION_CRT_TREE=0
                        -DOPTIMIZATION_COMPOSITE_PS=1

    default-language:    Haskell2010

executable clt13-tests
    default-language:     Haskell2010
    main-is:              Test.hs
    build-depends:        base >=4.8 && <4.9
                        , DRBG
                        , bytestring
                        , cereal
                        , containers
                        , crypto-api
                        , deepseq
                        , ghc-prim
                        , integer-gmp
                        , monad-parallel
                        , mtl
                        , parallel
    ghc-options:        -O2 -threaded "-with-rtsopts=-N4"
    cpp-options:        -DOPTIMIZATION_CRT_TREE=0
                        -DOPTIMIZATION_COMPOSITE_PS=1
