name:                clt13
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
--license-file:        LICENSE
author:              Brent Carmer
maintainer:          bcarmer@gmail.com
-- copyright:
category:            Cryptography
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
    exposed-modules:      CLT13
                        , CLT13.IndexSet
                        , CLT13.MMap
                        , CLT13.Encoding
                        , CLT13.Rand
                        , CLT13.Util

    build-depends:        base >=4.8 && <4.9
                        , containers
                        , bytestring
                        , integer-gmp
                        , parallel
                        , mtl
                        , crypto-api
                        , DRBG
                        , ghc-prim
                        , deepseq
                        , parallel
                        , monad-parallel

    ghc-options:        -threaded -with-rtsopts=-N4
    default-language:    Haskell2010

executable clt13-tests
    default-language:     Haskell2010
    main-is:              Test.hs
    build-depends:        base >=4.8 && <4.9
                        , containers
                        , bytestring
                        , integer-gmp
                        , parallel
                        , mtl
                        , crypto-api
                        , DRBG
                        , ghc-prim
                        , deepseq
                        , parallel
                        , monad-parallel
    ghc-options:        -O2 -threaded -fprof-auto "-with-rtsopts=-N4 -p"
